Fix: adjust header and hero overlap in mobile phone

--- a/styles.css
+++ b/styles.css
@@ -104,6 +104,7 @@ button {
   top: 0;
   left: 0;
   z-index: 10;
+  min-height: 4rem;
   width: 100%;
 }
 .logo {
@@ -158,6 +159,7 @@ section h2 {
   align-items: center;
   background: var(--color-dark-primary1);
   color: white;
+  padding-top: 4rem;
 }
 #hero img {
   max-height: 60vh;
